fix: settings menu on mobiles, avatar changes and changes in swiper;

--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -346,6 +346,9 @@ footer p {
 .avatar img {
     width: 164px;
 }
+.swiper{
+    height: inherit;
+}
 
 .swiper-slide {
     display: flex;
